# medas-computing-contract

./: .gitognore  Cargo.toml  README.md  cargo.toml
.cargo/: config.toml
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: integration_test.rs
