[package]
name = "medas-computing-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.2"
cosmwasm-schema = "1.2"
cw-storage-plus = "1.1"
cw2 = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
base64ct = { version = "=1.7.0", default-features = false }

[dev-dependencies]
cw-multi-test = "0.16"
